[package]
name = "yew_d3_example"
version = "0.1.0"
authors = ["Ivan Schuetz <ivanschuetz@gmail.com>"]
edition = "2018"

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
yew = { git = "https://github.com/yewstack/yew", branch = "master" }
yewtil = { git = "https://github.com/yewstack/yew", branch = "master" }
anyhow = "1.0"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"    
log = "0.4.6"
wasm-logger = "0.2.0"
stdweb = "0.4.20"
